--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "books",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "app": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "app": "nodemon app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mw18/google-books"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "config": "^3.3.4",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.19",
-    "validation": "^0.0.1"
+    "axios": "^0.21.1",
+    "concurrently": "^5.2.0",
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.3.16",
+    "react": "^16.6.3",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
